--- a/manifest.yml
+++ b/manifest.yml
@@ -15,16 +15,24 @@ static:
     'fonts/rezozero-sans-light-webfont.svg': 'fonts/rezozero-sans-light-webfont.svg'
     'fonts/rezozero-sans-light-webfont.ttf': 'fonts/rezozero-sans-light-webfont.ttf'
     'fonts/rezozero-sans-light-webfont.woff': 'fonts/rezozero-sans-light-webfont.woff'
+    'fonts/rezozero-sans-light-webfont.woff2': 'fonts/rezozero-sans-light-webfont.woff2'
 
     'fonts/rezozero-sans-mono-webfont.eot': 'fonts/rezozero-sans-mono-webfont.eot'
     'fonts/rezozero-sans-mono-webfont.svg': 'fonts/rezozero-sans-mono-webfont.svg'
     'fonts/rezozero-sans-mono-webfont.ttf': 'fonts/rezozero-sans-mono-webfont.ttf'
     'fonts/rezozero-sans-mono-webfont.woff': 'fonts/rezozero-sans-mono-webfont.woff'
+    'fonts/rezozero-sans-mono-webfont.woff2': 'fonts/rezozero-sans-mono-webfont.woff2'
 
     'fonts/rezozero-sans-regular-webfont.eot': 'fonts/rezozero-sans-regular-webfont.eot'
     'fonts/rezozero-sans-regular-webfont.svg': 'fonts/rezozero-sans-regular-webfont.svg'
     'fonts/rezozero-sans-regular-webfont.ttf': 'fonts/rezozero-sans-regular-webfont.ttf'
     'fonts/rezozero-sans-regular-webfont.woff': 'fonts/rezozero-sans-regular-webfont.woff'
+    'fonts/rezozero-sans-regular-webfont.woff2': 'fonts/rezozero-sans-regular-webfont.woff2'
+
+    'fonts/roadiz-icons.eot':  'fonts/roadiz-icons.eot'
+    'fonts/roadiz-icons.svg':  'fonts/roadiz-icons.svg'
+    'fonts/roadiz-icons.ttf':  'fonts/roadiz-icons.ttf'
+    'fonts/roadiz-icons.woff': 'fonts/roadiz-icons.woff'
 
     'img/header@2x.png': 'img/header@2x.png'
 
